// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentWorkspace page "loading" content renders correctly 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={0} notAttempted={true} canSave={true} assessmentConfiguration={{...}} questionId={0}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;

exports[`AssessmentWorkspace page with ContestVoting question renders correctly 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={7} notAttempted={true} canSave={true} assessmentConfiguration={{...}} questionId={0}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;

exports[`AssessmentWorkspace page with MCQ question renders correctly 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={1} notAttempted={true} canSave={true} assessmentConfiguration={{...}} questionId={2}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;

exports[`AssessmentWorkspace page with overdue assessment renders correctly 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={1} notAttempted={true} canSave={false} assessmentConfiguration={{...}} questionId={0}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;

exports[`AssessmentWorkspace page with programming question renders correctly 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={1} notAttempted={true} canSave={true} assessmentConfiguration={{...}} questionId={0}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;

exports[`AssessmentWorkspace renders Grading tab correctly if the question has been graded 1`] = `
"<RouterProvider router={{...}}>
  <Router basename=\\"/\\" location={{...}} navigationType=\\"POP\\" navigator={{...}}>
    <DataRoutes routes={{...}} state={{...}}>
      <RenderErrorBoundary location={{...}} revalidation=\\"idle\\" component={{...}} error={[undefined]} routeContext={{...}}>
        <RenderedRoute match={{...}} routeContext={{...}}>
          <Provider store={{...}}>
            <AssessmentWorkspace assessmentId={4} notAttempted={true} canSave={true} assessmentConfiguration={{...}} questionId={0}>
              <Blueprint4.NonIdealState className=\\"WorkspaceParent bp4-dark\\" description=\\"Getting mission ready...\\" icon={{...}} iconSize={48} layout=\\"vertical\\">
                <div className=\\"bp4-non-ideal-state bp4-non-ideal-state-vertical WorkspaceParent bp4-dark\\">
                  <div className=\\"bp4-non-ideal-state-visual\\" style={{...}}>
                    <Blueprint4.Icon icon={{...}} size={48} aria-hidden={true} tabIndex={-1}>
                      <Blueprint4.Spinner size={100}>
                        <div aria-valuemax={100} aria-valuemin={0} aria-valuenow={[undefined]} className=\\"bp4-spinner\\" role=\\"progressbar\\" size={100}>
                          <div className=\\"bp4-spinner-animation\\">
                            <svg width={100} height={100} strokeWidth=\\"4.00\\" viewBox=\\"3.00 3.00 94.00 94.00\\">
                              <path className=\\"bp4-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                              <path className=\\"bp4-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={210} />
                            </svg>
                          </div>
                        </div>
                      </Blueprint4.Spinner>
                    </Blueprint4.Icon>
                  </div>
                  <div className=\\"bp4-non-ideal-state-text\\">
                    <div>
                      Getting mission ready...
                    </div>
                  </div>
                </div>
              </Blueprint4.NonIdealState>
            </AssessmentWorkspace>
          </Provider>
        </RenderedRoute>
      </RenderErrorBoundary>
    </DataRoutes>
  </Router>
</RouterProvider>"
`;
